5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1635_2703.log
== TEST (2019-04-08 15:17:34) 
-- CODE:
idade = int(input("digite a idade: "))

if (18 > )
print(eleitor)
-- ERROR:
File "XXXX", line 3
    if (18 > )
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:12) 
-- CODE:
idade = int(input("digite a idade: "))

if (18 >  0)
print(eleitor)
-- ERROR:
File "XXXX", line 3
    if (18 >  0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:19:26) 
-- CODE:
idade = int(input("digite a idade: "))

if (18 > eleitor)
if (18 < nao eleitor)
print(eleitor)
-- ERROR:
File "XXXX", line 3
    if (18 > eleitor)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:19:30) 
-- CODE:
idade = int(input("digite a idade: "))

if (18 > eleitor)
if (18 < nao eleitor)
print(eleitor)
-- EXECUTION TIME:
0.17246
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if (18 > eleitor)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:48) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18)

print(nao eleitor)

-- ERROR:
File "XXXX", line 3
    if (idade > 18)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:20) 
-- CODE:
idade = int(input("digite a idade: "))

else (idade > 18)

print(nao eleitor)

-- ERROR:
File "XXXX", line 3
    else (idade > 18)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:29) 
-- CODE:
idade = int(input("digite a idade: "))

if: (idade > 18)

print(nao eleitor)

-- ERROR:
File "XXXX", line 3
    if: (idade > 18)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:22:31) 
-- CODE:
idade = int(input("digite a idade: "))

if: (idade > 18)

print(nao eleitor)

-- EXECUTION TIME:
0.220352
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if: (idade > 18)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:22:37) 
-- CODE:
idade = int(input("digite a idade: "))

if:(idade > 18)

print(nao eleitor)

-- ERROR:
File "XXXX", line 3
    if:(idade > 18)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:01) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(nao eleitor)

-- ERROR:
File "XXXX", line 5
    print(nao eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:23:04) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(nao eleitor)

-- EXECUTION TIME:
0.175545
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 5
    print(nao eleitor)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:05) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(nao eleitor)

-- ERROR:
File "XXXX", line 5
    print(nao eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:23:11) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(nao eleitor)

-- EXECUTION TIME:
0.201715
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 5
    print(nao eleitor)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:23) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(eleitor)

-- ERROR:
File "XXXX", line 5
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:23:24) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(eleitor)

-- EXECUTION TIME:
0.107968
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 5
    print(eleitor)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:52) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):

print(nao eleitor)

-- ERROR:
File "XXXX", line 5
    print(nao eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:02) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(nao eleitor)

-- ERROR:
File "XXXX", line 4
    print(nao eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:24:04) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(nao eleitor)

-- EXECUTION TIME:
0.175791
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 4
    print(nao eleitor)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:54) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(eleitor)

-- ERROR:
File "XXXX", line 4
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:41) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print("nao_eleitor")

-- ERROR:
File "XXXX", line 4
    print("nao_eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:26:52) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print("nao_eleitor")

-- EXECUTION TIME:
0.153948
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 4
    print("nao_eleitor")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:05) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(nao_eleitor)

-- ERROR:
File "XXXX", line 4
    print(nao_eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:28:07) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(nao_eleitor)

-- EXECUTION TIME:
0.18246
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 4
    print(nao_eleitor)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:29) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(eleitor)

-- ERROR:
File "XXXX", line 4
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:28:31) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(eleitor)

-- EXECUTION TIME:
0.17954
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 4
    print(eleitor)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:32) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
print(eleitor)

-- ERROR:
File "XXXX", line 4
    print(eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:33:10) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
	x = "eleitor"
else:

-- ERROR:
File "XXXX", line 6
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:53) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade >= 18):
	x = "eleitor"
else:
	x = "nao_eleitor"
print(x)

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:35:09) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade >= 18):
	x = "eleitor"
else:
	x = "nao_eleitor"
print(x)

-- EXECUTION TIME:
0.216659
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
